CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( calibration )
SET(CMAKE_CXX_COMPILER “g++”)
SET( CMAKE_BUILD_TYPE Debug )
FIND_PACKAGE( OpenCV REQUIRED )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES( calibration ${OpenCV_LIBS})
# ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)
ADD_EXECUTABLE(calibration ${PROJECT_SOURCE_DIR}/src/calibration.cpp )